// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/page/SubMenu renders collapsed nav correctly 1`] = `
<SubMenu
  childNavs={
    Array [
      Object {
        "navLabel": "Users",
        "navURL": "/404",
      },
    ]
  }
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  identifier="ADMIN"
  isCollapseMenuActive={true}
  isExpand={false}
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  parentNav={
    Object {
      "navIcon": Array [
        "fas",
        "cog",
      ],
      "navLabel": "Admin",
    }
  }
>
  <div>
    <Nav
      className="side-collapse-nav"
      onClick={[Function]}
      tag="ul"
      vertical={false}
    >
      <ul
        className="side-collapse-nav nav"
        onClick={[Function]}
      >
        <NavItem
          tag="li"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav nav-link side-nav-item"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fas",
                    "cog",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="lg"
                spin={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-cog fa-w-16 fa-lg "
                  data-icon="cog"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
              <span
                className="collapse-menu-title"
              >
                 
                Admin
                 
              </span>
            </a>
          </li>
        </NavItem>
      </ul>
    </Nav>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={350}
        unmountOnExit={false}
      >
        <div
          className="collapse"
          style={Object {}}
        >
          <Nav
            key="child-nav-0"
            tag="ul"
            vertical={false}
          >
            <ul
              className="nav"
            >
              <NavItem
                className="nav-item-extend"
                tag="li"
              >
                <li
                  className="nav-item-extend nav-item"
                >
                  <NavLink
                    activeClassName="side-nav-active"
                    className="nav-link side-nav-item"
                    to="/404"
                  >
                    <Link
                      aria-current={null}
                      className="nav-link side-nav-item"
                      to="/404"
                    >
                      <a
                        aria-current={null}
                        className="nav-link side-nav-item"
                        href="/404"
                        onClick={[Function]}
                      >
                        <span>
                           
                          Users
                           
                        </span>
                      </a>
                    </Link>
                  </NavLink>
                </li>
              </NavItem>
            </ul>
          </Nav>
        </div>
      </Transition>
    </Collapse>
  </div>
</SubMenu>
`;

exports[`components/page/SubMenu renders expanded nav correctly 1`] = `
<SubMenu
  childNavs={
    Array [
      Object {
        "navLabel": "Users",
        "navURL": "/404",
      },
      Object {
        "navLabel": "Roles",
        "navURL": "/404",
      },
    ]
  }
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  identifier="ADMIN"
  isCollapseMenuActive={true}
  isExpand={true}
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  parentNav={
    Object {
      "navIcon": Array [
        "fas",
        "cog",
      ],
      "navLabel": "Admin",
    }
  }
>
  <div>
    <Nav
      className="side-collapse-nav"
      onClick={[Function]}
      tag="ul"
      vertical={false}
    >
      <ul
        className="side-collapse-nav nav"
        onClick={[Function]}
      >
        <NavItem
          tag="li"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav nav-link side-nav-item"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fas",
                    "cog",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="lg"
                spin={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-cog fa-w-16 fa-lg "
                  data-icon="cog"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
              <span
                className="collapse-menu-title"
              >
                 
                Admin
                 
              </span>
            </a>
          </li>
        </NavItem>
      </ul>
    </Nav>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={true}
        mountOnEnter={false}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={350}
        unmountOnExit={false}
      >
        <div
          className="collapse show"
          style={Object {}}
        >
          <Nav
            key="child-nav-0"
            tag="ul"
            vertical={false}
          >
            <ul
              className="nav"
            >
              <NavItem
                className="nav-item-extend"
                tag="li"
              >
                <li
                  className="nav-item-extend nav-item"
                >
                  <NavLink
                    activeClassName="side-nav-active"
                    className="nav-link side-nav-item"
                    to="/404"
                  >
                    <Link
                      aria-current={null}
                      className="nav-link side-nav-item"
                      to="/404"
                    >
                      <a
                        aria-current={null}
                        className="nav-link side-nav-item"
                        href="/404"
                        onClick={[Function]}
                      >
                        <span>
                           
                          Users
                           
                        </span>
                      </a>
                    </Link>
                  </NavLink>
                </li>
              </NavItem>
            </ul>
          </Nav>
          <Nav
            key="child-nav-1"
            tag="ul"
            vertical={false}
          >
            <ul
              className="nav"
            >
              <NavItem
                className="nav-item-extend"
                tag="li"
              >
                <li
                  className="nav-item-extend nav-item"
                >
                  <NavLink
                    activeClassName="side-nav-active"
                    className="nav-link side-nav-item"
                    to="/404"
                  >
                    <Link
                      aria-current={null}
                      className="nav-link side-nav-item"
                      to="/404"
                    >
                      <a
                        aria-current={null}
                        className="nav-link side-nav-item"
                        href="/404"
                        onClick={[Function]}
                      >
                        <span>
                           
                          Roles
                           
                        </span>
                      </a>
                    </Link>
                  </NavLink>
                </li>
              </NavItem>
            </ul>
          </Nav>
        </div>
      </Transition>
    </Collapse>
  </div>
</SubMenu>
`;
